--- a/tods/pubspec.yaml
+++ b/tods/pubspec.yaml
@@ -1,5 +1,5 @@
 name: tods
-description: A new Flutter project.
+description: Note Apllicatio.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -19,15 +19,17 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
+  flutter: '>=1.10.2-pre.54'
 
 dependencies:
   flutter:
     sdk: flutter
+    
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -61,16 +63,20 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
-  #   - family: Schyler
+  #   - family: Roboto
   #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+  #       - asset: fonts/Roboto/Roboto-Thin.ttf
+  #         weight: 100
+  #       - asset: fonts/Roboto/Roboto-Light.ttf
+  #         weight: 300
+  #       - asset: fonts/Roboto/Roboto-Regular.ttf
+  #         weight: 400
+  #       - asset: fonts/Roboto/Roboto-Medium.ttf
+  #         weight: 500
+  #       - asset: fonts/Roboto/Roboto-Bold.ttf
   #         weight: 700
+  #       - asset: fonts/Roboto/Roboto-Black.ttf
+  #         weight: 900
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
